<resources>
    <string name="app_name">VehiculosApp</string>
    <string name="action_delete_all">Borrar todo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Vehiculos</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lbl_marca">Marca</string>
    <string name="lbl_modelo">Modelo</string>
    <string name="lbl_anio_de_fabricacion">Año de Fabricación</string>
    <string name="btn_guardar_vehiculo">Guardar Vehiculo</string>
    <string name="btn_crear_vehiculo">Crear Vehiculo</string>
    <string name="mensaje_creacion_vehiculo">Vehiculo %1$s Creado</string>
    <string name="mensaje_eliminacion_vehiculo">Vehiculo Borrado</string>
    <string name="mensaje_eliminar_todo">Todos los vehiculos han sido eliminados</string>
    <string name="mensaje_mod_vehiculo">Vehiculo %1$s modificado</string>
    <string name="lbl_image_car">Imagen de un automovil</string>
    <string name="lbl_car_image">Car Example preview</string>
    <string name="lbl_tv_warning">No hay vehiculos creados</string>
    <string name="lbl_iv_warning">Advertencia no vehiculos creados</string>
    <string name="lbl_menu_eliminar_vehiculo">Eliminar Vehiculo</string>
    <string name="title_create_vehicle">Crear Vehiculo</string>
    <string name="title_update_vehicle">Actualizar Vehiculo</string>
    <string name="delete_dialog_title">Confirmar Acción</string>
    <string name="delete_all_dialog_message">¿Desea eliminar todos los vehiculos?</string>
    <string name="delete_dialog_message">¿Desea eliminar el vehiculos seleccionado?</string>
    <string name="ok">Si</string>
    <string name="cancel">Cancelar</string>
</resources>